@@ -352,7 +352,12 @@ facet_panels.grid <- function(facet, panel, coord, theme, geom_grobs) {
     bg <- coord_render_bg(coord, panel$range[[i]], theme)
 
     geom_grobs <- lapply(geom_grobs, "[[", i)
-    panel_grobs <- c(list(bg), geom_grobs, list(fg))
+
+    if(theme$panel.ontop) {
+      panel_grobs <- c(geom_grobs, list(bg), list(fg))
+    } else {
+      panel_grobs <- c(list(bg), geom_grobs, list(fg))
+    }
 
     gTree(children = do.call("gList", panel_grobs))
   })
