@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.0): do not edit by hand
+% Generated by roxygen2 (4.0.1): do not edit by hand
 \name{theme}
 \alias{theme}
 \title{Set theme elements}
@@ -131,6 +131,9 @@ The individual theme elements are:
                    (\code{element_line}; inherits from \code{panel.grid.minor}) \cr
   panel.grid.minor.y \tab horizontal minor grid lines
                    (\code{element_line}; inherits from \code{panel.grid.minor}) \cr
+  panel.ontop        \tab option to place the panel (background, gridlines)
+                          over the data layers.  Usually used with a transparent
+                          or blank \code{panel.background}. (\code{logical}) \cr
 
   plot.background  \tab background of the entire plot
                    (\code{element_rect}; inherits from \code{rect}) \cr
