@@ -1,3 +1,9 @@
+NEW FEATURES
+
+* new theme setting `panel.ontop` (logical) allows placing background elements
+  (e.g., gridlines) on top of data. Usually used with blank or transparent
+  `panel.background`.  (@noamross. #551)
+
 ggplot2 1.0.0
 ----------------------------------------------------------------
 
